# ffier

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  FFIER_CHANGES.md  README.md  justfile
.github/workflows/: check.yml
example/: .gitignore  README.md  justfile
example-krun/c/: Makefile  main.c
example-krun/cdylib/: Cargo.toml
example-krun/cdylib/src/: gen_header.rs  lib.rs
example-krun/lib/: Cargo.toml
example-krun/lib/src/: lib.rs
example/c/: Makefile  main.c
example/c-consumer/: Makefile  main.c
example/cdylib/: Cargo.toml
example/cdylib/src/: gen_header.rs  lib.rs
example/lib/: Cargo.toml
example/lib/src/: lib.rs
example/mylib/: Cargo.toml
example/mylib-cdylib/: Cargo.toml
example/mylib-cdylib/src/: gen_header.rs  gen_rust_client.rs  lib.rs
example/mylib-via-cdylib/: Cargo.toml  build.rs
example/mylib-via-cdylib/src/: generated.rs  lib.rs
example/mylib/src/: lib.rs
example/rust-consumer/: Cargo.toml
example/rust-consumer/src/: main.rs
ffier/: Cargo.toml
ffier-annotations/: Cargo.toml
ffier-annotations/src/: lib.rs
ffier-bridge/: Cargo.toml
ffier-bridge-macros/: Cargo.toml
ffier-bridge-macros/src/: lib.rs
ffier-bridge/src/: lib.rs
ffier-builtins/: Cargo.toml
ffier-builtins/src/: lib.rs
ffier-gen-c/: Cargo.toml
ffier-gen-c-header/: Cargo.toml
ffier-gen-c-header/src/: lib.rs
ffier-gen-c-macros/: Cargo.toml
ffier-gen-c-macros/src/: lib.rs
ffier-gen-c/src/: lib.rs
ffier-gen-rust/: Cargo.toml
ffier-gen-rust-client/: Cargo.toml
ffier-gen-rust-client/src/: lib.rs
ffier-gen-rust/src/: lib.rs
ffier-impl/: Cargo.toml
ffier-impl/src/: bridge.rs  lib.rs  meta.rs
ffier-macros/: Cargo.toml
ffier-macros/src/: gen_bridge.rs  gen_client.rs  lib.rs  meta.rs
ffier-meta/: Cargo.toml
ffier-meta/src/: lib.rs
ffier-rt/: Cargo.toml
ffier-rt/src/: lib.rs
ffier-schema/: Cargo.toml
ffier-schema/src/: lib.rs
ffier/src/: lib.rs
tasks/: trait-ref-dispatch-design.md
tests/: .gitignore  expected_header.h  justfile
tests/c/: ffier_test.h  test_main  test_main.c
tests/cdylib/: Cargo.toml
tests/cdylib/src/: gen_header.rs  gen_rust_client.rs  lib.rs
tests/compat/: Cargo.toml  build.rs
tests/compat/src/: generated_v1.rs  lib.rs
tests/consumer/: Cargo.toml
tests/consumer/src/: lib.rs
tests/foreign-lib/: Cargo.toml
tests/foreign-lib-via-cdylib/: Cargo.toml  build.rs
tests/foreign-lib-via-cdylib/src/: generated.rs  lib.rs
tests/foreign-lib/src/: lib.rs
tests/foreign-trait-crate/: Cargo.toml
tests/foreign-trait-crate/src/: lib.rs
tests/lib/: Cargo.toml
tests/lib-via-cdylib/: Cargo.toml
tests/lib-via-cdylib/src/: generated.rs  lib.rs
tests/lib/src/: lib.rs
tests/submodule-cdylib/: Cargo.toml
tests/submodule-cdylib/src/: lib.rs
tests/submodule-lib/: Cargo.toml
tests/submodule-lib/src/: errors.rs  lib.rs  types.rs
