[workspace]
members = ["ffier", "ffier-rt", "ffier-meta", "ffier-impl", "ffier-builtins", "ffier-schema", "ffier-bridge", "ffier-bridge-macros", "ffier-gen-c-header", "ffier-gen-rust-client", "tests/lib", "tests/cdylib", "tests/lib-via-cdylib", "tests/consumer", "tests/submodule-lib", "tests/submodule-cdylib", "tests/compat", "tests/foreign-trait-crate", "tests/foreign-lib"]
resolver = "2"
