[workspace]
members = ["ffier", "ffier-rt", "ffier-impl", "ffier-builtins", "ffier-schema", "ffier-gen-c-header", "ffier-gen-rust-client", "tests/lib", "tests/lib-via-cdylib", "tests/consumer", "tests/submodule-lib", "tests/submodule-cdylib", "tests/compat", "tests/foreign-trait-crate", "tests/foreign-lib", "tests/foreign-lib-via-cdylib"]
resolver = "2"
