[package]
name = "ffier-impl"
version = "0.2.0"
edition = "2024"
license = "Apache-2.0"
description = "Proc macros and bridge codegen for ffier"

[lib]
proc-macro = true

[dependencies]
ffier-schema = { path = "../ffier-schema" }
syn = { version = "2", features = ["extra-traits", "full", "visit-mut"] }
quote = "1"
proc-macro2 = "1"
serde_json = "1"
