[package]
name = "ffier"
version = "0.2.0"
edition = "2024"
license = "Apache-2.0"
description = "Automatic FFI binding generator for Rust libraries"

[features]
default = ["std"]
std = ["ffier-rt/std"]

[dependencies]
ffier-rt = { path = "../ffier-rt" }
ffier-impl = { path = "../ffier-impl" }
ffier-builtins = { path = "../ffier-builtins" }
