[package]
name = "mylib-cdylib"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "gen-header"
path = "src/gen_header.rs"

[[bin]]
name = "gen-rust-client"
path = "src/gen_rust_client.rs"

[dependencies]
mylib = { path = "../mylib" }
ffier = { path = "../../ffier" }
ffier-gen-c = { path = "../../ffier-gen-c" }
ffier-gen-c-macros = { path = "../../ffier-gen-c-macros" }
ffier-gen-rust = { path = "../../ffier-gen-rust" }
