[package]
name = "ffier-test-cdylib"
version = "0.1.0"
edition = "2024"

[features]
default = ["fruit-label"]
fruit-label = ["ffier-test-lib/fruit-label"]

[lib]
crate-type = ["cdylib"]

[dependencies]
ffier-test-lib = { path = "../lib", default-features = false }
ffier = { path = "../../ffier" }
ffier-bridge = { path = "../../ffier-bridge" }
ffier-bridge-macros = { path = "../../ffier-bridge-macros" }
