[package]
name = "ffier-test-cdylib"
version = "0.1.0"
edition = "2024"

[features]
default = ["fruit-label"]
fruit-label = ["ffier-test-lib/fruit-label"]

[lib]
crate-type = ["cdylib"]

[dependencies]
ffier-test-lib = { path = "../lib", default-features = false }
ffier-test-foreign-lib = { path = "../foreign-lib" }
ffier = { path = "../../ffier" }
ffier-bridge = { path = "../../ffier-bridge" }
ffier-bridge-macros = { path = "../../ffier-bridge-macros" }
ffier-schema = { path = "../../ffier-schema" }
ffier-gen-c-header = { path = "../../ffier-gen-c-header" }
ffier-gen-rust-client = { path = "../../ffier-gen-rust-client" }

[[bin]]
name = "gen-header"
path = "src/bin/gen-header.rs"

[[bin]]
name = "gen-rust-client"
path = "src/bin/gen-rust-client.rs"
