[package]
name = "ffier-test-cdylib"
version = "0.1.0"
edition = "2024"

[features]
default = ["fruit-label"]
fruit-label = ["ffier-test-lib/fruit-label"]

[lib]
crate-type = ["cdylib"]

[dependencies]
ffier-test-lib = { path = "../lib", default-features = false, features = ["ffi"] }
ffier-test-foreign-lib = { path = "../foreign-lib" }
ffier = { path = "../../ffier" }
