[package]
name = "ffier-test-lib"
version = "0.1.0"
edition = "2024"

[features]
default = ["fruit-label"]
fruit-label = []

[dependencies]
ffier = { path = "../../ffier" }
ffier-builtins = { path = "../../ffier-builtins" }
foreign-trait-crate = { path = "../foreign-trait-crate" }
ffier-test-foreign-lib = { path = "../foreign-lib" }
anyhow = "1"
bitflags = "2"
thiserror = "2"
