[package]
name = "ffier-test-lib"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["lib", "cdylib"]

[features]
default = ["fruit-label", "ffi", "optional-entry"]
fruit-label = []
ffi = []
optional-entry = []

[dependencies]
ffier = { path = "../../ffier" }
ffier-builtins = { path = "../../ffier-builtins" }
foreign-trait-crate = { path = "../foreign-trait-crate" }
ffier-test-foreign-lib-via-cdylib = { path = "../foreign-lib-via-cdylib" }
anyhow = "1"
bitflags = "2"
thiserror = "2"
