[package]
name = "ffier-test-submodule-cdylib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ffier-test-submodule-lib = { path = "../submodule-lib" }
ffier = { path = "../../ffier" }
ffier-bridge = { path = "../../ffier-bridge" }
ffier-bridge-macros = { path = "../../ffier-bridge-macros" }
